[project]
name = "actionspro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Captain Solaris", email = "hello@spielprinzip.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
